@@ -10,10 +10,10 @@
 	 <_title>GCompris Administration Menu</_title>
 	 <_description>Left-Click with the mouse to select an activity</_description>
 	 <_prerequisite></_prerequisite>
-         <_goal>If you want to fine tune GCompris to your needs, you can use the administration module here. The ultimate goal is to provide reporting usage by user. This is mandatory for parents and teacher who want to analyse the progress, strength and weakeness of their kids.</_goal>
-         <_manual>- In the 'Boards' section you can change the list of activities. Just untoggle them in the treeview. You can change the language for reading and for example the sound language for colors.
-- You can save multiple configurations, and switch easily. In the 'Profile' section add a profile, then in the 'Board' section select the profile in the combobox and after select the boards you want to be active. You can add lot of
-profiles, with differents list of boards, differents language. You select the active profile to be used by default in the 'Profile' section by using the default button. You can also choose a profile from the command line.
-- You can add users, class and for each class, you can create groups of users. Note that you can import users from a comma separated file too. In a profile put one or more groups. In this case the login will appears at next GCompris start. Having the kids identified in GCompris let us provide reporting for each kid. It is also to let kids teach reading or typing their names (login is configurable).</_manual>
+         <_goal>If you want to fine tune GCompris to your needs, you can use the administration module here. The ultimate goal is to provide child-specific reporting for parents and teacher who want to monitor the progress, strengths and weakenesses of their children.</_goal>
+         <_manual>- In the 'Boards' section you can change the list of activities. Just untoggle them in the treeview. You can change the language used for reading, for example, then language used for saying the name of colours.
+- You can save multiple configurations, and switch easily. In the 'Profile' section add a profile, then in the 'Board' section select the profile in the combobox, then select the boards you want to be active. You can add lot of
+profiles, with different lists of boards, and different languages. You set the default profile in the 'Profile' section, by chhosing the profile you want, then clicking on the 'Default' button. You can also choose a profile from the command line.
+- You can add users, classes and for each class, you can create groups of users. Note that you can import users from a comma-separated file. Assign one or more groups to a profile, after which those new logins will appear after restarting GCompris. Being able to identify individual children in GCompris means we can provide individual reports. It also recognizes the children as individuals; they can learn to type in, and recognize their own usernames (login is configurable).</_manual>
   </Board>
 </GCompris>
