@@ -1,3 +1,14 @@
+2005-09-04  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Fixed bug #314680 
+	http://bugzilla.gnome.org/show_bug.cgi?id=314680
+	Thanks to Clytie Siddall
+
+	* boards/administration.xml.in:
+	* po/TRANSLATORS.README:
+	* src/boards/python/admin/user_list.py:
+	* src/gcompris/gcompris.c:
+
 2005-09-04  Yves Combe  <yves@ycombe.net>
 
 	add file for wordlists in xml format.
